# docs/swagger.json
@@ -123,12 +123,5 @@
                 }
             }
         }
-    },
-    "securityDefinitions": {
-        "OAuth2Implicit": {
-            "type": "oauth2",
-            "flow": "implicit",
-            "authorizationUrl": "http://localhost:8080/api/v1/login"
-        }
     }
 }
